--- a/package.json
+++ b/package.json
@@ -1,49 +1,1 @@
-{
-  "name": "portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@vroger/vue-videobg": "^2.1.0",
-    "framer-motion": "^12.0.0-alpha.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
-    "react-use-navigate": "^0.1.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.4.4"
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "tailwind.config.js",
-  "author": "",
-  "license": "ISC"
-}
+{"homepage":"https://YOUNESyoyou123.github.io/damn","name":"portfolio","version":"0.1.0","private":true,"dependencies":{"@testing-library/jest-dom":"^5.17.0","@testing-library/react":"^13.4.0","@testing-library/user-event":"^13.5.0","@vroger/vue-videobg":"^2.1.0","framer-motion":"^12.0.0-alpha.0","react":"^18.3.1","react-dom":"^18.3.1","react-router-dom":"^6.23.1","react-scripts":"5.0.1","react-use-navigate":"^0.1.1","web-vitals":"^2.1.4"},"scripts":{"start":"react-scripts start","predeploy":"npm run build","deploy":"gh-pages -d build","build":"react-scripts build","test":"react-scripts test","eject":"react-scripts eject"},"eslintConfig":{"extends":["react-app","react-app/jest"]},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]},"devDependencies":{"gh-pages":"^6.1.1","tailwindcss":"^3.4.4"},"description":"This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).","main":"tailwind.config.js","author":"","license":"ISC"}
