--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://chems-zrg.github.io/amazonforest",
+  "homepage": "https://chems-zrg.github.io/lasttry",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
